<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/mediaDescription"
        android:layout_width="223dp"
        android:layout_height="172dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/media_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/mediaPoster"
        app:layout_constraintTop_toBottomOf="@+id/mediaTitle" />

    <TextView
        android:id="@+id/mediaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/media_display_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/mediaPoster"
        app:layout_constraintTop_toBottomOf="@+id/mediaReccTitle" />

    <ImageView
        android:id="@+id/mediaPoster"
        android:layout_width="154dp"
        android:layout_height="231dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaReccTitle"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/redoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/prefs_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mealReccTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food_recc_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaPoster" />

    <TextView
        android:id="@+id/mealTitle"
        android:layout_width="165dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/meal_display_title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/mealIcon"
        app:layout_constraintTop_toBottomOf="@+id/mealReccTitle" />

    <ImageView
        android:id="@+id/mealIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealReccTitle"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/mealCookTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cooking_time"
        app:layout_constraintStart_toEndOf="@+id/mealIcon"
        app:layout_constraintTop_toBottomOf="@+id/mealTitle" />

    <TextView
        android:id="@+id/mediaReccTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/media_recc_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mealLinkButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="120dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/mealIcon"
        app:layout_constraintTop_toBottomOf="@+id/mealCookTime"
        app:srcCompat="@drawable/ic_open_in_browser_black_24dp" />

    <TextView
        android:id="@+id/makesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/total_yield"
        app:layout_constraintStart_toEndOf="@+id/mealIcon"
        app:layout_constraintTop_toBottomOf="@+id/mealCookTime" />

</androidx.constraintlayout.widget.ConstraintLayout>